fix: delete horizontal scroll bar

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -214,11 +214,11 @@
   }
 
   html {
-    @apply scroll-smooth;
+    @apply scroll-smooth overflow-x-hidden;
   }
 
   body {
-    @apply bg-background text-foreground transition-colors duration-300;
+    @apply bg-background text-foreground transition-colors duration-300 overflow-x-hidden;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
